--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-@{
-    ViewData["Title"] = "Home Page";
-}
+@{ ViewData["Title"] = "Home Page"; }
 <h1>Default Blank Page~</h1>
 <p>Get to adding stuff</p>
+<a href="Register">Register</a>
+<a href="Login">Login</a>
